@@ -6,7 +6,6 @@ import net.minecraft.client.DeltaTracker;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.Util;
 import net.minecraft.world.entity.player.Player;
 
 import net.neoforged.api.distmarker.Dist;
@@ -23,17 +22,28 @@ import net.neoforged.neoforge.client.event.RegisterGuiLayersEvent;
  */
 @EventBusSubscriber(modid = BlockMod.MODID, value = Dist.CLIENT)
 public final class StaminaHudLayer {
-    private static final int BAR_WIDTH = 182;   // matches the hotbar/food row width
-    private static final int BAR_HEIGHT = 5;
+    private static final ResourceLocation EMPTY_TEXTURE = ResourceLocation.fromNamespaceAndPath(
+            BlockMod.MODID, "textures/gui/hud/empty_stamina_bar.png");
+    private static final ResourceLocation DEPLETED_TEXTURE = ResourceLocation.fromNamespaceAndPath(
+            BlockMod.MODID, "textures/gui/hud/guard_break_stamina_bar.png");
+    private static final ResourceLocation FILLED_TEXTURE = ResourceLocation.fromNamespaceAndPath(
+            BlockMod.MODID, "textures/gui/hud/stamina_bar.png");
+    private static final ResourceLocation REDUCING_TEXTURE = ResourceLocation.fromNamespaceAndPath(
+            BlockMod.MODID, "textures/gui/hud/stamina_bar_reducing.png");
+
+    private static final int TEXTURE_WIDTH = 90;
+    private static final int TEXTURE_HEIGHT = 8;
+    private static final int REDUCING_TEXTURE_WIDTH = 92;
+    private static final int REDUCING_TEXTURE_HEIGHT = 10;
+    private static final int BAR_WIDTH = 182;
+    private static final int BAR_HEIGHT = 8;
+    private static final int REDUCING_INSET = 1;
+    private static final int REDUCING_WIDTH = BAR_WIDTH + REDUCING_INSET * 2;
+    private static final int REDUCING_HEIGHT = BAR_HEIGHT + REDUCING_INSET * 2;
     private static final int FOOD_ROW_OFFSET = 39;  // vanilla food bar top offset from screen bottom
     private static final int BAR_GAP = 8;           // pixels between the stamina bar and the food row
 
-    private static final int COLOR_BACK = 0xCC101018;
-    private static final int COLOR_BORDER = 0xFF202028;
-    private static final int COLOR_NORMAL = 0xFF2F6FD0;   // deep blue fill
-    private static final int COLOR_DEPLETED = 0xFFD0302A; // solid red, no flashing (v2.0)
     private static final int COLOR_OUTLINE = 0xFFF5F5F5;  // parry-window white outline
-    private static final int COLOR_DEPLETED_TEXT = 0xFFFF6A5E;
 
     @SubscribeEvent
     static void onRegisterGuiLayers(RegisterGuiLayersEvent event) {
@@ -53,7 +63,9 @@ public final class StaminaHudLayer {
         if (player == null || minecraft.options.hideGui || player.isSpectator()) {
             return;
         }
-        if (Float.isNaN(ClientGuardState.displayStamina())) {
+        float frameStamina = ClientGuardState.frameStamina(
+                deltaTracker.getGameTimeDeltaPartialTick(false));
+        if (Float.isNaN(frameStamina) || !ClientGuardState.shouldRenderHud()) {
             return; // no sync yet
         }
 
@@ -61,22 +73,37 @@ public final class StaminaHudLayer {
         int y = graphics.guiHeight() - FOOD_ROW_OFFSET - BAR_GAP - BAR_HEIGHT;
         int left = right - BAR_WIDTH;
 
-        // Display stamina may legitimately be negative while depleted; only clamp the top.
-        float display = Math.min(ClientGuardState.displayStamina(), ClientGuardState.maxStamina());
         boolean depleted = ClientGuardState.isDepleted();
         boolean parryWindow = ClientGuardState.parryRemainTicks() > 0;
 
-        graphics.fill(left - 1, y - 1, right + 1, y + BAR_HEIGHT + 1, COLOR_BORDER);
-        graphics.fill(left, y, right, y + BAR_HEIGHT, COLOR_BACK);
+        if (depleted) {
+            blitScaled(graphics, DEPLETED_TEXTURE, left, y, BAR_WIDTH, BAR_HEIGHT,
+                    TEXTURE_WIDTH, TEXTURE_HEIGHT);
+        } else {
+            blitScaled(graphics, EMPTY_TEXTURE, left, y, BAR_WIDTH, BAR_HEIGHT,
+                    TEXTURE_WIDTH, TEXTURE_HEIGHT);
 
-        float fillRatio = Math.max(0.0f, Math.min(display / Math.max(ClientGuardState.maxStamina(), 0.001f), 1.0f));
-        int fillWidth = Math.round(BAR_WIDTH * fillRatio);
-        if (fillWidth > 0) {
-            int color = depleted ? COLOR_DEPLETED : COLOR_NORMAL;
-            if (!depleted && inRegenDelay()) {
-                color = withPulse(color); // 轻微脉动: "regen is on hold"
+            float maxStamina = Math.max(ClientGuardState.maxStamina(), 0.001f);
+            float fillRatio = Math.clamp(frameStamina / maxStamina, 0.0f, 1.0f);
+            int fillWidth = Math.round(BAR_WIDTH * fillRatio);
+            if (fillWidth > 0) {
+                if (ClientGuardState.isReducing(frameStamina)) {
+                    int reducingRight = fillWidth >= BAR_WIDTH
+                            ? left - REDUCING_INSET + REDUCING_WIDTH
+                            : left + fillWidth;
+                    graphics.enableScissor(left - REDUCING_INSET, y - REDUCING_INSET,
+                            reducingRight, y - REDUCING_INSET + REDUCING_HEIGHT);
+                    blitScaled(graphics, REDUCING_TEXTURE, left - REDUCING_INSET,
+                            y - REDUCING_INSET, REDUCING_WIDTH, REDUCING_HEIGHT,
+                            REDUCING_TEXTURE_WIDTH, REDUCING_TEXTURE_HEIGHT);
+                    graphics.disableScissor();
+                } else {
+                    graphics.enableScissor(left, y, left + fillWidth, y + BAR_HEIGHT);
+                    blitScaled(graphics, FILLED_TEXTURE, left, y, BAR_WIDTH, BAR_HEIGHT,
+                            TEXTURE_WIDTH, TEXTURE_HEIGHT);
+                    graphics.disableScissor();
+                }
             }
-            graphics.fill(left, y, left + fillWidth, y + BAR_HEIGHT, color);
         }
 
         if (parryWindow) {
@@ -87,29 +114,13 @@ public final class StaminaHudLayer {
             graphics.fill(right, y, right + 1, y + BAR_HEIGHT, COLOR_OUTLINE);
         }
 
-        if (depleted) {
-            // Upward arrow right of the bar: "recovering fast", drawn as text (no custom texture).
-            graphics.drawString(minecraft.font, "▲", right + 4, y - 2, COLOR_DEPLETED_TEXT, false);
-        }
     }
 
-    /**
-     * Client-side heuristic for the 延迟中 visual: stamina is positive, below max,
-     * and not moving at the normal/paced regen speed. A precise flag would need a
-     * payload change (server-defined state); the heuristic reads only synced values.
-     */
-    private static boolean inRegenDelay() {
-        float stamina = ClientGuardState.targetStamina();
-        return !ClientGuardState.isDepleted()
-                && stamina < ClientGuardState.maxStamina()
-                && stamina > 0f;
-    }
-
-    private static int withPulse(int baseColor) {
-        long millis = Util.getMillis() % 1000L;
-        float phase = millis < 500L ? millis / 500.0f : (1000L - millis) / 500.0f;
-        int alpha = 150 + Math.round(70 * phase); // 150..220
-        return (alpha << 24) | (baseColor & 0x00FFFFFF);
+    private static void blitScaled(GuiGraphics graphics, ResourceLocation texture,
+            int x, int y, int width, int height,
+            int textureWidth, int textureHeight) {
+        graphics.blit(texture, x, y, width, height, 0.0f, 0.0f,
+                textureWidth, textureHeight, textureWidth, textureHeight);
     }
 
     private StaminaHudLayer() {}
